--- a/frontend/src/components/pages/FlightSearch.css
+++ b/frontend/src/components/pages/FlightSearch.css
@@ -3,8 +3,18 @@
     border: 1px solid #e7e7e7;
     padding: 10px 35px;
    margin: 0 auto;
-}
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 
+}
+.button{
+    margin-top: 10px;
+    color: white;
+    background-color: rgb(26, 115, 232);
+    border: none;
+    width: 100px;
+}
 .searchBox div{
     text-align: center;
 }
