--- a/frontend/src/components/pages/LoginPage.css
+++ b/frontend/src/components/pages/LoginPage.css
@@ -11,12 +11,13 @@
 #center{
     margin: 8% auto;
     /* border: 1px solid ; */
+    text-align: center;
     border-radius: 5px;
     width: 440px;
     -webkit-box-shadow: 0 0 2px grey;
     box-shadow: 0 0 2px grey;
     padding: 5px 30px;
-    height: 270px;
+    height: 320px;
 }
          
 h2{
@@ -24,9 +25,9 @@ h2{
      margin: 12px 0;  
      color: grey; 
 }
-span{
+/* span{
     color: rgb(255, 35, 35);
-}
+} */
 h4,h3{
     
     font-weight: 600;
